# mipt_rep

./: .gitignore
1_homework/: ee.cpp  hwf.c  mf.cpp  sf.cpp
1course/1_homework/: ee.cpp  ns.cpp
1course/2_homework/: gf.cpp  hwe.c  pe.c  ps.cpp
1course/3_homework/: cm.c  cse.c  mp.c  mpk.c  msb.c  scb.c  si.c  sse.c
2_homework/: cc.c  ft.c  hwe  hwe.c  lm.cpp  pf.c  pn.cpp
2course/project/: CMakeLists.txt  gui.cpp  model1.pt
2course/project/python_script/: script.py
2course/project/python_script/mnist/: model.py
2course/project/python_script/utee/: selector.py
3_homework/: asb.c  cm.c  me.c  mpk.c  ms.c  sq.c
4_homework/: bp.c  hwk.c  mc.c  sa.c  su.c
5_homework/: ai.c  cl.c  hwh.c  no.c  rg.c  tt.c  xc.c
6_homework/: dp.c  ex.c
7_homework/: as.c  ra.c
SquareE/: SquareE.c
akinator/: akinator.cpp  akinator.h  main.cpp  special_onegin.cpp  special_onegin.h
bintree/: bintree.c  main  main.c
contest/: contest.c  contest.cpp
diff/: diff.cpp  diff.h  main.cpp
dlist/: dlist.c  main
greedy_alg/: ev.c
hash_sum/: hash_sum.c
header-file/: for_all_header.h
modules_homework/: source.txt  ts1  ts1.c  ts2  ts2.c
numexp/: main.cpp
pol_system/: stack.cpp
proc/: assembler.c  assembler.cpp  cpu.c  disassembler.c  prog.asm  special_onegin.c  special_onegin.cpp  stack.c
qsort/: qsort.c
stack/: main.c  main.cpp  stack.c  stack.cpp  stack.h
test/: test.c  test.cpp
true_onegin/: onegin  onegin.c  tempCodeRunnerFile.c
true_proc/: assembler.cpp  assembler.h  disassembler.cpp  special_onegin.cpp  special_onegin.h  stack.cpp  stack.h
(+137 files in other folders)
